# 1brc-rs

./: .gitignore  Cargo.toml  build.rs
src/: data.rs  itoa.rs  multi_threaded.rs  single_threaded.rs
